compiler/tools/fpp-check/test/cycle/array.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/cycle/array.fpp: 1.1
array A = [3] B
^
error: encountered a use-def cycle:
  use B at [ local path prefix ]/compiler/tools/fpp-check/test/cycle/array.fpp: 1.15 refers to definition B at [ local path prefix ]/compiler/tools/fpp-check/test/cycle/array.fpp: 2.1
  use C at [ local path prefix ]/compiler/tools/fpp-check/test/cycle/array.fpp: 2.15 refers to definition C at [ local path prefix ]/compiler/tools/fpp-check/test/cycle/array.fpp: 3.1
  use A at [ local path prefix ]/compiler/tools/fpp-check/test/cycle/array.fpp: 3.15 refers to definition A at [ local path prefix ]/compiler/tools/fpp-check/test/cycle/array.fpp: 1.1
